// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot - mount 1`] = `
<button
  className="submitButton"
  onClick={[Function]}
  type="submit"
/>
`;

exports[`Button snapshot - render 1`] = `
<button
  class="submitButton"
  type="submit"
/>
`;

exports[`Button snapshot - shallow 1`] = `
<button
  className="submitButton"
  onClick={[Function]}
  type="submit"
/>
`;
